refactor(domain): refactor match simulation and state cloning
- refactor MatchState turn simulation
- execute turns per team
- add deep copy support for Agent and MatchState
- improve in-memory state persistence
- optimize config loading
- clean up domain model and mappers#